Fixed card icon small

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,5 +31,6 @@ body .wrapper {
     &.small{
         width: 20px;
         height: 20px;
+        margin-right: 7px;
     }
 }
